--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/example_db
+spring.datasource.url=jdbc:mysql://localhost:3306/car_renting
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create
